--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -158,6 +158,27 @@
                                     <span>Terms</span>
                                 </a>
                             </li>
+
+                            <div class="separator"></div>
+                    <div class="menu-block">
+                        <ul>
+                            <li data-section="personal">
+                                <a href="https://pictogrammers.github.io/@mdi/font/2.0.46/">
+                                    <i data-feather="faq"></i>
+                                    <span>MDI Icons</span>
+                                </a>
+                            </li>
+
+                            <li data-section="personal">
+                                <a href="https://fontawesome.com/v4/icons/">
+                                    <i data-feather="faq"></i>
+                                    <span>Font Awesome Icons</span>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </div>
+
                         </ul>
                     </div>
                     
