--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -296,6 +296,22 @@
               </div>
           </div>
             {% endfor %}
+
+            <div class="col-md-5 col-lg-4">
+                <div class="item">
+
+                    <div class="heading">
+                        <h3>EnterPrise</h3>
+                    </div>
+                    <p>More than 500 people in the group.</p>
+
+
+                    <a href="{% url 'home:contact' %}" class="c-button button is-fullwidth">
+                     CONTACT
+                    </a>
+
+                </div>
+            </div>
         </div>
     </div>
     <script>
